<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exampleSSID" />

    <TextView
        android:id="@+id/mac_adress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_mac" />

    <TextView
        android:id="@+id/signal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_signal_strength" />

</LinearLayout>